# ai-engineer-labs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  learning-log.md  pyproject.toml
.github/workflows/: ci.yml
src/: hello.py  pydantic_models.py
week-01/day-02/: type_safety_notes.md
week_01/day_02/: type_hints_practice.py
week_01/day_03/: main.py
week_01/day_04/: test_main.py
week_02/day_07/: ml_workflow_notes.md  text_classification_baseline.py
